tests/rosetta/out/C/boolean-values.error
cc: exit status 1
/tmp/boolean-values.c: In function ‘parseBool’:
/tmp/boolean-values.c:8:13: warning: implicit declaration of function ‘lower’ [-Wimplicit-function-declaration]
    8 |   char *l = lower(s);
      |             ^~~~~
/tmp/boolean-values.c:8:13: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
/tmp/boolean-values.c:9:47: warning: comparison between pointer and integer
    9 |   if (((strcmp(l, "1") == 0) || l == "t" || l == 1 || l == "yes" || l == "y")) {
      |                                               ^~
/usr/bin/ld: /tmp/cchjs8xN.o: in function `parseBool':
boolean-values.c:(.text+0x1d): undefined reference to `lower'
collect2: error: ld returned 1 exit status
