tests/rosetta/out/C/boolean-values.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:55Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:55Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

int parseBool(char *s) {
  const char *l = lower(s);
  if (((strcmp(l, "1") == 0) || l == "t" || l == 1 || l == "yes" || l == "y")) {
    return 1;
  }
  return 0;
}

int main() {
  int n = 1;
  printf("%s\n", (n) ? "true" : "false");
  printf("bool\n");
  n = (!n);
  printf("%s\n", (n) ? "true" : "false");
  int x = 5;
  int y = 8;
  printf("x == y: %s\n", (x == y) ? "true" : "false");
  printf("x < y: %s\n", (x < y) ? "true" : "false");
  printf("\\nConvert String into Boolean Data type\\n\n");
  const char *str1 = "japan";
  printf("Before : string\n");
  int bolStr = parseBool(str1);
  printf("After : bool\n");
}

int main() {
  main();
  return 0;
}
